Report for 3.0.0-next.174+

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         />
 
         <script type="module" src="/src/main.js"></script>
+        <!--ssr:head-->
     </head>
 
-    <body></body>
+    <body>
+        <!--ssr:html-->
+    </body>
 </html>
